# ol_dsp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  MyCallback.h  README.md  WORKPLAN-WEB-MIDI.md  dependencies.json  docker-compose.yml  fx_main.cpp  main.cpp  package-lock.json  package.json  submodules.json  workplan.md
fxlib/: CMakeLists.txt  Delay.cpp  Delay.h  DelayControlPanel.cc  DelayControlPanel.h  FxChain.cpp  FxChain.h  FxControlPanel.cpp  FxControlPanel.h  LPF.h  ReverbControlPanel.cpp  ReverbControlPanel.h  ol_fxlib.h  ol_fxlib_core.h
modules/coremidi/midi-snoop/: CMakeLists.txt  Makefile  README.md  midisnoop.mm
modules/coremidi/midi-snoop/snoize-spy/: CMakeLists.txt  Info-SnoizeMIDISpy.plist
modules/daisy/: CMakeLists.txt  daisy_dummy.cpp  daisy_dummy.h
modules/daisy/fx/delayfx/: CMakeLists.txt  main.cpp
modules/daisy/fx/multifx/: Makefile  main.cpp
modules/daisy/io/: CMakeLists.txt  DaisySerial.h  PolyvoiceControls.h  Serial.h  io.h
modules/daisy/sampler/: Makefile  main.cpp
modules/daisy/ui/: CMakeLists.txt  GpioPool.h  Page.cpp  PolyvoiceInputs.h  ui.h
modules/daisy/workouts/adc/: main.cpp
modules/daisy/workouts/display/: main.cpp
modules/daisy/workouts/sandbox/: Makefile  main.cpp
modules/daisy/workouts/serialization/: main.cpp
modules/daisy/workouts/uart/: main.cpp
modules/du-ino/demo/: CMakeLists.txt  Makefile  demo.ino  find-port.sh  loop.cpp  loop.h
modules/fxlib/: CMakeLists.txt  Delay.cpp  Delay.h  DelayControlPanel.cpp  DelayControlPanel.h  Filter.cpp  Fx.h  FxChain.cpp  FxChain.h  FxControlPanel.cpp  FxControlPanel.h  FxRack.cpp  LPF.cpp  LPF.h  LpfControlPanel.cpp  LpfControlPanel.h  Reverb.cpp  Reverb.h  ReverbControlPanel.cpp  ReverbControlPanel.h  ReverbFx.cpp  Saturator.cpp  cc_map.h  ol_fxlib.h  ol_fxlib_core.h
modules/juce/hello/: CMakeLists.txt  README.md  juce_hello.cpp
modules/juce/host/: CMakeLists.txt  PluginHost.cpp  host.cpp  host.h
modules/juce/midi-server/: CLAUDE.md  CMakeLists.txt  MidiDeviceTester.cpp  MidiHttpServer.cpp  MidiHttpServer2.cpp  MidiServer.cpp  NetworkMidiServer.cpp  NetworkMidiServer.cpp.bak  ROUTE_MANAGER_TESTS.md
modules/juce/midi-server/.claude/: project.yaml
modules/juce/midi-server/.claude/config/: output-style.json
modules/juce/midi-server/.claude/output-styles/: workflow-designer.yaml
modules/juce/midi-server/.claude/workflows/: bug-fix.yaml  feature-development.yaml
modules/juce/midi-server/.specstory/: .project.json
modules/juce/midi-server/.specstory/history/: 2025-10-05_18-11-56Z-install-at-oletizi-multer.md  2025-10-05_18-21-19Z-analyze-these-staged-git.md  2025-10-05_19-05-44Z-analyze-these-staged-git.md  2025-10-05_19-29-04Z-analyze-these-staged-git.md  2025-10-05_20-18-46Z-analyze-these-staged-git.md  2025-10-05_20-21-49Z-analyze-these-staged-git.md  2025-10-05_20-41-58Z-analyze-these-staged-git.md  2025-10-06_02-34-28Z-analyze-these-staged-git.md  2025-10-06_02-39-18Z-analyze-these-staged-git.md  2025-10-06_02-54-54Z-analyze-these-staged-git.md  2025-10-06_03-36-43Z-analyze-these-staged-git.md  2025-10-06_16-47-23Z-analyze-these-staged-git.md  2025-10-06_17-44-42Z-analyze-these-staged-git.md  2025-10-06_18-22-12Z-analyze-these-staged-git.md  2025-10-06_18-35-24Z-analyze-these-staged-git.md  2025-10-06_19-14-46Z-analyze-these-staged-git.md  2025-10-06_21-39-43Z-analyze-these-staged-git.md  2025-10-06_22-27-43Z-analyze-these-staged-git.md  2025-10-06_23-13-35Z-analyze-these-staged-git.md  2025-10-07_02-30-22Z-analyze-these-staged-git.md  2025-10-07_02-55-34Z-analyze-these-staged-git.md  2025-10-07_03-13-42Z-analyze-these-staged-git.md  2025-10-07_03-27-36Z-analyze-these-staged-git.md  2025-10-07_03-53-58Z-analyze-these-staged-git.md  2025-10-07_04-05-59Z-analyze-these-staged-git.md  2025-10-07_04-44-42Z-analyze-these-staged-git.md  2025-10-07_05-25-18Z-analyze-these-staged-git.md  2025-10-07_05-53-04Z-analyze-these-staged-git.md  2025-10-07_19-48-40Z-analyze-these-staged-git.md  (+10 more)
modules/juce/midi-server/tests/: PHASE4_TEST_REPORT.md  README.md  TEST_COVERAGE_SUMMARY.md
modules/juce/plugin/workout/: CMakeLists.txt
modules/ol_teensy/: CMakeLists.txt  ol_teensy.h
modules/ol_teensy/app/synth/: Makefile  loop.h
modules/ol_teensy/io/: TeensySerial.h  ol_teensy_io.h
modules/ol_teensy/workouts/: CMakeLists.txt  dummy.cpp  midi_dummy.cpp  tft_dummy.cpp
modules/ol_teensy/workouts/midi/: loop.h
modules/ol_teensy/workouts/tft/: Makefile  loop.h
modules/ol_teensy/workouts/uart/: Makefile  library.properties  loop.cpp  loop.h
modules/synthlib/: Adsr.h  CMakeLists.txt  ControlPanel.h  Filter.h  MultiChannelSample.cpp  MultiChannelSample.h  Multivoice.cpp  OscillatorSoundSource.cpp  OscillatorSoundSource.h  PitchedSoundSource.h  Polyvoice.cpp  Polyvoice.h  Portamento.h  Sample.cpp  Sample.h  SampleDataSource.h  SampleSoundSource.cpp  SampleSoundSource.h  SoundSource.h  SynthVoice.cpp  SynthVoice.h  Voice.cpp  Voice.h  VoiceMap.cpp  VoiceMap.h  ol_synthlib.h  ol_synthlib_core.h
test/: CMakeLists.txt  FakeIt  basic_test.cpp  fx_test.cpp  googletest  gui_test.cpp  patch_test.cpp  reverb_test.cpp  serializer_test.cpp  synth_test.cpp  workout_test.cpp
test/drumkit/: drumkit.sfz  drumkit.yaml
workouts/: CMakeLists.txt  FxAudioCallback.cpp  FxAudioCallback.h  FxMidiCallback.cpp  FxMidiCallback.h  MainComponent.cpp  MainComponent.h  MyCallback.h  PatchLoader.cpp  PatchLoader.h  SamplePool.h  SfmlHelpers.h  SpyAudioSource.cpp  SpyAudioSource.h  SynthAudioCallback.h  SynthMidiCallback.h  VoiceLoader.cpp  VoiceLoader.h  convolution_main.cpp  delay_main.cpp  drum_main.cpp  filter_main.cpp  fx_main.cpp  gui_main.cpp  gui_test_main.cpp  miniaudio_main.cpp  player_main.cpp  reverb_main.cpp  sample_main.cpp  saturator_main.cpp  stmlib_main.cpp  synth_main.cpp  workout_buddy.cpp  workout_buddy.h
workouts/attic/: CMakeLists.txt  SamplePool.h  SpyAudioSource.cpp  SynthAudioCallback.h  SynthMidiCallback.cpp  SynthMidiCallback.h  delay_main.cpp  drum_main.cpp  filter_main.cpp  fx_main.cpp  gui_main.cpp  sample_main.cpp  saturator_main.cpp  synth_main.cpp
(+2155 files in other folders)
