add_subdirectory(io)

add_executable(ol_daisy_workouts_serialization workouts/serialization/main.cpp)
target_link_libraries(ol_daisy_workouts_serialization daisy ol_corelib ol_daisy_io ol_ctllib)
target_compile_definitions(ol_daisy_workouts_serialization PRIVATE DAISY_NATIVE)

add_executable(ol_daisy_workouts_uart workouts/uart/main.cpp)
target_link_libraries(ol_daisy_workouts_uart daisy ol_corelib ol_daisy_io)
target_compile_definitions(ol_daisy_workouts_uart PRIVATE DAISY_NATIVE)

add_executable(ol_daisy_workouts_adc workouts/adc/main.cpp)
target_link_libraries(ol_daisy_workouts_adc daisy ol_daisy_io)
target_compile_definitions(ol_daisy_workouts_adc PRIVATE DAISY_NATIVE)

add_executable(ol_daisy_workouts_sandbox workouts/sandbox/main.cpp)
target_link_libraries(ol_daisy_workouts_sandbox daisy DaisySP ol_daisy_ui ol_corelib ol_fxlib ol_synthlib)
target_compile_definitions(ol_daisy_workouts_sandbox PRIVATE DAISY_NATIVE)

add_executable(ol_daisy_workouts_display workouts/display/main.cpp)
target_link_libraries(ol_daisy_workouts_display daisy DaisySP)
target_compile_definitions(ol_daisy_workouts_display PRIVATE DAISY_NATIVE)

add_executable(ol_daisy_multifx fx/multifx/main.cpp)
target_link_libraries(ol_daisy_multifx daisy DaisySP ol_daisy_io ol_corelib ol_fxlib ol_synthlib)
target_compile_definitions(ol_daisy_multifx PRIVATE DAISY_NATIVE)

add_executable(ol_daisy_sampler sampler/main.cpp)
target_link_libraries(ol_daisy_sampler daisy DaisySP ol_daisy_ui ol_corelib ol_fxlib ol_synthlib)
target_compile_definitions(ol_daisy_sampler PRIVATE DAISY_NATIVE)

